<resources>
    <string name="app_name">Ex1</string>
    <string name="line_thickness">Line Thickness</string>
    <string name="line_colour">Line Colour</string>
    <string name="arrow_keys">Arrow Keys</string>
    <string name="red">Red</string>
    <string name="yellow">yellow</string>
    <string name="cyan">Cyan</string>
    <string name="clear_canvas">Clear Canvas</string>
    <string name="reset">Reset</string>
    <string name="pin_lock">Operation of a 7 pin lock</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string-array name="exlist">
        <item>Exercise 1</item>
        <item>Exercise 2</item>
        <item>Exercise 3</item>
    </string-array>
    <string-array name="thicknessArray">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>
</resources>
